[lworld] TestC2CCalls fails with SIGSEGV in frame::sender_for_compiled_frame

XMLWordPrintable

      # SIGSEGV (0xb) at pc=0x00007fcc3b395241, pid=3368, tid=3373
      #
      # JRE version: Java(TM) SE Runtime Environment (15.0) (fastdebug build 15-lworldea+0-2020-03-25-0739573.tobias...)
      # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 15-lworldea+0-2020-03-25-0739573.tobias..., mixed mode, tiered, compressed oops, g1 gc, linux-amd64)
      # Problematic frame:
      # V [libjvm.so+0xa3c241] frame::sender_for_compiled_frame(RegisterMap*) const+0x71

      Stack: [0x00007fcc38035000,0x00007fcc38135000], sp=0x00007fcc38132960, free space=1014k
      Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [libjvm.so+0xa3c241] frame::sender_for_compiled_frame(RegisterMap*) const+0x71
      V [libjvm.so+0xa3c658] frame::sender(RegisterMap*) const+0xc8
      V [libjvm.so+0x15cdd39] JavaThread::nmethods_do(CodeBlobClosure*)+0xd9
      V [libjvm.so+0x15d81a9] Threads::possibly_parallel_threads_do(bool, ThreadClosure*)+0x169
      V [libjvm.so+0x1443671] ParallelSPCleanupTask::work(unsigned int)+0x31
      V [libjvm.so+0x172e8c4] GangWorker::run_task(WorkData)+0x84
      V [libjvm.so+0x172ea08] GangWorker::loop()+0x48
      V [libjvm.so+0x15dab56] Thread::call_run()+0xf6
      V [libjvm.so+0x12f27a6] thread_native_entry(Thread*)+0x116

            Assignee:
            Tobias Hartmann
            Reporter:
            Tobias Hartmann
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: