8241764: [lworld] TestC2CCalls fails with SIGSEGV in frame::sender_for_compiled_frame